# elementary-hello-again

./: meson.build
data/: com.github.martinstork.elementary-hello-again.appdata.xml.in  com.github.martinstork.elementary-hello-again.desktop.in
debian/: changelog  control  copyright
po/: POTFILES  com.github.martinstork.elementary-hello-again.pot  nl.po
src/: Application.vala
